# learning

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
api/: __init__.py  main.py  models.py
app/: dashboard.py
app/api/: main.py
app/etl/: data_pipeline.py
dashboard/: __init__.py  app.py
dfdf/workflows/: ci.yml
etl/: __init__.py  cli.py  download_data.py  preprocess.py
models/: __init__.py  base_model.py  inference.py  mlflow_utils.py  train_lora_cls.py  train_lora_gen.py
scripts/: monitor_and_retrain.py
src/learning_project/: __init__.py
tests/: test_api.py  test_etl.py
